--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
