--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@img/sharp-win32-x64": "^0.33.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.36.4",
@@ -20,8 +21,11 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "path": "^0.12.7",
+    "sharp": "^0.33.0",
+    "socket.io": "^4.7.2",
     "validator": "^13.9.0"
   }
 }
