--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.3.6",
     "moment": "^2.29.4",
+    "peerjs": "^1.5.4",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
+    "react-pdf": "^8.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
